@@ -18,6 +18,8 @@ Version 1.2
 
 - Updated the Logtalk lexer.
 
+- Added `line_number_start` option to image formatter (#456).
+
 - Fixed the HtmlFormatter's handling of noclasses=True to not output any
   classes (#427).
 
